2010-04-04  Ulrich Drepper  <drepper@redhat.com>

	* argp/Makefile: Add rules to build and run bug-argp2.
	* argp/bug-argp2.c: New file.

2010-02-05  Sergey Poznyakoff  <gray@gnu.org.ua>

	[BZ #11254]
	* argp/argp-parse.c (convert_options): Fix improper use of `|'
	between character values.

2010-04-04  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11276]
	* sysdeps/posix/remove.c (IS_NO_DIRECTORY_ERROR): Define.
	(remove): Use IS_NO_DIRECTORY_ERROR to check for file being no
	directory.
	* sysdeps/unix/sysv/linux/remove.c: New file.

	* conform/data/sys/stat.h-data: Fix testing of S_IS* macros.

	[BZ #11279]
	* io/sys/stat.h: Always define S_ISSOCK for XPG6 and up.

	[BZ #11287]
	* csu/Makefile ($(objpfx)version-info.h): Handle newer kernel headers
	which don't define UTS_RELEASE.

2010-04-04  H.J. Lu  <hongjiu.lu@intel.com>
	    Ulrich Drepper  <drepper@redhat.com>

	[BZ #11292]
	* sysdeps/x86_64/multiarch/init-arch.c (__init_cpu_features): Allow
	concurrent initialization and use of __cpu_features.

2010-04-04  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/multiarch/init-arch.h (cpu_features): Add tag to
	the enum.

2010-04-03  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11333]
	* sysdeps/unix/readdir_r.c (__READDIR_R): Add support for platforms
	which include unnecessary padding in d_reclen.
	* sysdeps/unix/sysv/linux/i386/readdir64_r.c: Select work-around for
	unnecessary padding.

	[BZ #11387]
	* sysdeps/unix/sysv/linux/ifaddrs.c (map_newlin): Don't abort on
	unknown interface, return -1.
	(getifaddrs_internal): Rename from getifaddrs.  Handle errors in
	map_newlink be returning -EAGAIN.
	(getifaddrs): If -EAGAIN is returned from getifaddrs_internal try
	again.

2010-03-25  Ryan S. Arnold  <rsa@us.ibm.com>

	* sysdeps/unix/sysv/linux/getsysstats.c (next_line): Remove
	redundant and incorrect else block which overwrites current line
	with the partial next line.

2010-04-03  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11438]