@@ -1,5 +1,8 @@
 2010-04-04  Ulrich Drepper  <drepper@redhat.com>
 
+	[BZ #11070]
+	* resolv/netdb.h: Declare iruserok and iruserok_af.
+
 	* argp/Makefile: Add rules to build and run bug-argp2.
 	* argp/bug-argp2.c: New file.
 
